--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ section {
     font-size: 40px;
     font-weight: 700;
 }
+.headLine-white {
+    font-size: 40px;
+    font-weight: 700;
+    color: #fff;
+}
 .bg-darkBlue {
     background: #171f5e;
     width: 100%;
@@ -229,4 +234,34 @@ header .navbar .menu ul li.phone-number {
 #indexPage .advantages .item {
     display: flex;
     align-items: center;
+}
+#indexPage .advantages {
+    padding-bottom: 100px;
+}
+#indexPage .advantages-ex img {
+    border: 3px solid #171f5e;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+}
+#indexPage .advantages-ex .advan {
+    padding: 30px 100px;
+}
+#indexPage .selling-estate-bg {
+    background: #16c72e;
+    width: 100%;
+    height: auto;
+}
+.carousel-inner .carousel-item.active,
+    .carousel-inner .carousel-control-next {
+      transform: translateX(-33%);
+    }
+    
+    .carousel-inner .carousel-item.active, 
+    .carousel-inner .carousel-control-prev {
+      transform: translateX(33%);
+    }
+
+.carousel-inner .carousel-control-next,
+.carousel-inner .carousel-control-prev { 
+  transform: translateX(0);
 }
