--- a/style.css
+++ b/style.css
@@ -7,9 +7,6 @@ section {
 * {
     font-family: 'Play', sans-serif;
 }
-.list-styled-none {
-    list-style: none;
-}
 header .navbar {
     position: fixed;
     overflow: hidden;
@@ -83,22 +80,6 @@ header {
     padding: 0 0 0 25px;
     font-weight: 800;
 }
-.btn-orange {
-    color: #fff;
-    padding: 10px 20px;
-    background: #f2430d;
-    display: inline-block;
-    text-decoration: none;
-    cursor: pointer;
-}
-.btn-green {
-    color: #fff;
-    padding: 10px 20px;
-    background: #16c72e;
-    display: inline-block;
-    text-decoration: none;
-    cursor: pointer;
-}
 .star::before {
     content: "";
     position: absolute;
@@ -127,12 +108,6 @@ header .navbar .menu ul li a {
     text-decoration: none;
     color: #fff;
 }
-header .navbar .menu ul li.phone-number {
-    background: #16c72e;
-    border-radius: 50px;
-    padding: 10px 16px;
-    font-size: 16px;
-}
 #indexPage .intro .carousel-item img {
     height: 100%;
 }
@@ -144,37 +119,6 @@ header .navbar .menu ul li.phone-number {
     color: #2516C7;
     font-weight: bold;
     line-height: 1.2;
-}
-#indexPage .user-form {
-    background: linear-gradient(180deg, rgba(242, 67, 13, 1), rgba(232, 140, 48, 1));
-    width: 100%;
-    height: auto;
-    padding: 25px 0;
-}
-#indexPage .user-form ul li {
-    padding: 0 30px;
-}
-#indexPage .user-form ul li input {
-    border-radius: 50px;
-    border: none;
-    padding: 5px 50px;
-}
-#indexPage .user-form ul li a {
-    border-radius: 50px;
-    border: none;
-    background: #16c72e;
-    padding: 7px 70px;
-    text-decoration: none;
-    color: #fff;
-    font-weight: 700;
-    font-size: 14px;
-}
-#indexPage .user-form p {
-    font-size: 16px;
-}
-#indexPage .user-form h3 {
-    font-size: 26px;
-    font-weight: 700;
 }
 #indexPage .ocean-resident .content h3 {
     font-size: 26px;
@@ -205,52 +149,6 @@ header .navbar .menu ul li.phone-number {
     top: 0;
     left: 0;
 }
-#indexPage .florida {
-    background: url("img/florida-background.jpg") no-repeat center center / cover;
-    width: 100%;
-    height: 800px;
-    background-attachment: fixed;
-    position: relative;
-    overflow: hidden;
-}
-#indexPage .florida h2 {
-    font-size: 40;
-    font-weight: bold;
-}
-#indexPage .florida h2 {
-    font-size: 40px;
-}
-#indexPage .florida h3 {
-    font-size: 26px;
-}
-#indexPage .input-box {
-    display: inline-block;
-    border-top-left-radius: 50px;
-    border-bottom-right-radius: 50px;
-    background: linear-gradient(180deg, rgba(242, 67, 13, 1), rgb(240, 255, 37));
-    padding: 40px 20px 100px;
-}
-#indexPage .user-form-florida ul li {
-    padding: 10px 30px;
-}
-#indexPage .user-form-florida ul li input {
-    border-radius: 50px;
-    border: none;
-    padding: 10px 70px;
-}
-#indexPage .user-form-florida ul li a {
-    border-radius: 50px;
-    border: none;
-    background: #16c72e;
-    padding: 10px 100px;
-    text-decoration: none;
-    color: #fff;
-    font-weight: 700;
-    font-size: 14px;
-}
-#indexPage .user-form-florida p {
-    font-size: 16px;
-}
 #indexPage .call {
     background: #f2430d;
     padding: 15px 35px;
@@ -278,7 +176,7 @@ header .navbar .menu ul li.phone-number {
     align-items: center;
 }
 #indexPage .advantages {
-    padding-bottom: 100px;
+    padding: 50px 0;
 }
 #indexPage .advantages-ex img {
     border: 3px solid #171f5e;
@@ -288,10 +186,9 @@ header .navbar .menu ul li.phone-number {
 #indexPage .advantages-ex .advan {
     padding: 30px 100px;
 }
-#indexPage .selling-estate-bg {
+.selling-estate-bg {
     background: #16c72e;
     width: 100%;
-    height: auto;
 }
 /* SWIPER SLIDE */
 .selling-estate .swiper {
@@ -463,38 +360,20 @@ header .navbar .menu ul li.phone-number {
 }
 .diversity .product {
     background: #fff;
-    height: auto;
-    width: 69%;
-}
-.diversity .product-list .col-4:nth-child(n+1) {
-    display: flex;
-    justify-content: center;
-    padding: 60px 0;
+    height: 100%;
 }
 .diversity .product .info ul li {
     position: relative;
-    margin: 0 0 10px 28px;
-}
-.diversity .product .info {
-    height: 410px;
-    padding-top: 20px;
-}
-.diversity .product .info ul {
-    padding-top: 30px;
+    padding: 5px 25px;
 }
 .diversity .product .info ul li::before {
     content: "";
     background: url("data:image/svg+xml;utf8, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22100%25%22%20%20viewBox%3D%220%200%201792%201896.0833%22%20fill%3D%22rgba(13%2C%2098%2C%20242%2C%201.0)%22%3E%20%3Cpath%20d%3D%22M1671%20566q0%2040-28%2068l-724%20724-136%20136q-28%2028-68%2028t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28%2068-28t68%2028l294%20295%20656-657q28-28%2068-28t68%2028l136%20136q28%2028%2028%2068z%22%3E%3C%2Fpath%3E%20%3C%2Fsvg%3E") no-repeat;
     position: absolute;
     top: 0;
-    left: -15%;
+    left: 0;
     width: 20px;
     height: 20px;
-}
-.diversity .product .btn-orange {
-    border-radius: 50px;
-    font-weight: 700;
-    margin-bottom: 30px;
 }
 .policies {
     background: url(img/beach-bg.jpeg) no-repeat center center / cover;
@@ -505,28 +384,6 @@ header .navbar .menu ul li.phone-number {
 .policies .price-list, .policies .policy {
     background: #fff;
     position: relative;
-    margin: 15px 15px;
-}
-.policies ul {
-    list-style: none;
-    padding: 10px 0 0 75px;
-}
-.policies .price-list::before, .policies .policy::before {
-    content: "";
-    background: #16c72e;
-    position: absolute;
-    width: 12%;
-    height: 100%;
-    left: 0;
-}
-.policies .price-list::after, .policies .policy::after {
-    content: url(img/flower-policy.svg);
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    height: 100%;
-    width: 10%;
-    transform: translateY(-13%);
 }
 .five-star .utility img {
     border-bottom-right-radius: 50px;
@@ -538,12 +395,13 @@ header .navbar .menu ul li.phone-number {
 .five-star .utility {
     background: #0b68e6;
     color: #fff;
-    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 .five-star .utility h3 {
     font-size: 18px;
     font-weight: 700;
-    padding: 20px 0 40px 15px;
 }
 .customer-feelings {
     background: #171f5e;
@@ -551,26 +409,17 @@ header .navbar .menu ul li.phone-number {
 }
 .customer-feelings .comment {
     background: #fff;
-    width: 75%;
-    flex-grow: 1;
-    padding-bottom: 127px;
-    margin-bottom: 15px;
     color: #545454;
-}
-.customer-feelings .inner {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
     position: relative;
 }
-.customer-feelings .inner::after {
+.customer-feelings .comment::after {
     position: absolute;
     content: url(img/quote.svg);
     width: 10%;
     height: 10%;
     transform: rotate(180deg);
-    top: 67%;
-    left: 72%;
+    bottom: -15px;
+    right: 40px;
 }
 .customer-feelings .customer1 {
     border-radius: 50%;
@@ -606,7 +455,7 @@ header .navbar .menu ul li.phone-number {
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
     line-height: 1.6;
-    padding: 25px;
+    letter-spacing: 1px;
 }
 .customer-feelings .feelings .inner .wrapper .info {
     padding-left: 20px;
@@ -647,4 +496,34 @@ footer .last-line::before  {
     width: 800px;
     height: 1px;
     background: #fff;
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 996px) {
+    .diversity .product .info ul li {
+        font-size: 13px;
+    }
+    .policies ul {
+        padding: 10px 0 0 45px;
+    }
+    .policies .price-list::after, .policies .policy::after {
+        top: 59%;
+        left: 3px;
+    }
+    .five-star .utility h3 {
+        font-size: 13px;
+    }
+    .customer-feelings .inner {
+        padding: 30px 0;
+    }
+    #indexPage .hospital {
+        padding: 40px 0;
+    }
+    #indexPage .advantages .item {
+        padding: 20px 0;
+    }
+    .customer-feelings .inner {
+        align-items: center;
+    }
 }
