--- a/style.css
+++ b/style.css
@@ -1,95 +1,120 @@
 img {
     max-width: 100%;
 }
+
 section {
     margin: 50px 0;
 }
+
 * {
     font-family: 'Play', sans-serif;
 }
-.navbar .navbar-toggler.collapse,.navbar .navbar-toggler, .navbar .navbar-toggler.collapsed {
-    border: none!important;
-    color: rgba(255, 255, 255, 0)!important;
+
+.navbar .navbar-toggler.collapse,
+.navbar .navbar-toggler,
+.navbar .navbar-toggler.collapsed {
+    border: none !important;
+    color: rgba(255, 255, 255, 0) !important;
 }
+
 .header-bg {
     background: #05224a;
 }
+
 footer {
     overflow: hidden;
 }
-.navbar ul li a{
+
+.navbar ul li a {
     color: #fff;
     text-decoration: none;
     padding: 0 10px;
     font-weight: bold;
     font-size: 14px;
 }
+
 .nav-link:hover {
-    color: #fff!important;
+    color: #fff !important;
 }
+
 .headLine {
     font-size: 32px;
     font-weight: 700;
 }
+
 .headLine-40 {
     font-size: 40px;
     font-weight: 700;
 }
+
 .headLine-place {
     font-size: 18px;
     color: #2516C7;
     font-weight: 700;
 }
+
 .headLine-product {
     font-size: 16px;
     color: #051f4d;
     font-weight: 700;
 }
+
 .headLine-subWhite {
     font-size: 26px;
     color: #2516C7;
 }
+
 .headLine-policy {
     font-size: 18px;
     color: #051f4d;
     font-weight: 700;
 }
+
 .headLine-product span {
     color: #f2430d;
 }
+
 .title-place {
     font-size: 16px;
     color: #fff;
 }
+
 .headLine-white {
     font-size: 40px;
     font-weight: 700;
     color: #fff;
 }
+
 .bg-darkBlue {
     background: #171f5e;
     width: 100%;
     height: auto;
 }
+
 .darkBlue {
     color: #171f5e;
 }
+
 .lightDarkBlue {
     color: #2516C7;
 }
+
 .royalColor {
     color: #e8b730;
 }
+
 .subheadLine {
     font-size: 26;
     font-weight: 400;
 }
+
 .star {
     font-size: 16px;
     position: relative;
     padding: 0 0 0 25px;
     font-weight: 800;
 }
+
 .star::before {
     content: "";
     position: absolute;
@@ -99,41 +124,50 @@ footer {
     top: 0;
     left: 0;
 }
+
 section.intro {
     margin: 10px 0;
 }
+
 #indexPage .intro .carousel-item img {
     height: 100%;
 }
+
 #indexPage .intro .carousel {
     padding-bottom: 20px;
 }
+
 #indexPage .intro-content .content h3 {
     font-size: 26px;
     color: #2516C7;
     font-weight: bold;
     line-height: 1.2;
 }
+
 #indexPage .ocean-resident .content h3 {
     font-size: 26px;
     color: #e8b730;
     font-weight: bold;
     line-height: 1.2;
 }
+
 #indexPage .hospital {
     background: #171f5e;
 }
+
 #indexPage .hospital .content h3 {
     font-size: 26px;
     color: #e8b730;
     font-weight: bold;
     line-height: 1.2;
 }
+
 #indexPage .hospital .content ul li {
     font-size: 16px;
     position: relative;
     padding: 0 0 0 25px;
 }
+
 #indexPage .hospital .content ul li::before {
     content: "";
     position: absolute;
@@ -143,50 +177,62 @@ section.intro {
     top: 0;
     left: 0;
 }
+
 #indexPage .call {
     background: #f2430d;
     padding: 15px 35px;
     display: inline-block;
 }
+
 #indexPage .feedback .album-feedback {
     margin-top: 50px;
 }
+
 #indexPage .overview .features ul li {
     border-bottom: 1px solid black;
 }
+
 #indexPage .advantages a {
     margin: 30px 15px;
 }
+
 #indexPage .advantages .item img {
     width: 80px;
     height: 80px;
 }
+
 #indexPage .advantages p {
     max-width: 100%;
     padding-left: 10px;
 }
+
 #indexPage .advantages .item {
     display: flex;
     align-items: center;
 }
+
 #indexPage .advantages {
     padding: 50px 0;
 }
+
 #indexPage .advantages-ex img {
     border: 3px solid #171f5e;
     border-top-left-radius: 50px;
     border-bottom-right-radius: 50px;
 }
+
 .selling-estate-bg {
     background: #16c72e;
     width: 100%;
     overflow: hidden;
 }
+
 /* SWIPER SLIDE */
 .selling-estate .swiper {
     width: 100%;
     height: 100%;
 }
+
 .selling-estate .swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -206,6 +252,7 @@ section.intro {
     flex-direction: column;
     justify-content: start;
 }
+
 .selling-estate .swiper-slide img {
     display: block;
     width: 100%;
@@ -214,19 +261,22 @@ section.intro {
     border-top-left-radius: 50px;
     border-bottom-right-radius: 50px;
 }
+
 .selling-estate .swiper-slide {
-    height: 800px!important;
+    height: 800px !important;
 }
+
 .selling-estate .swiper-content {
-    text-align: start!important;
+    text-align: start !important;
     padding-top: 20px;
 }
+
 .real-img-sec .swiper {
     width: 100%;
     height: 100%;
-  }
+}
 
-  .real-img-sec .swiper-slide {
+.real-img-sec .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
@@ -244,25 +294,26 @@ section.intro {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-  }
+}
 
-  .real-img-sec .swiper-slide img {
+.real-img-sec .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
+}
 
-  .real-img-sec .swiper {
+.real-img-sec .swiper {
     margin-left: auto;
     margin-right: auto;
-  }
-  .real-img-sec .swiper {
+}
+
+.real-img-sec .swiper {
     width: 100%;
     height: 100%;
-  }
+}
 
- .intro .swiper-slide {
+.intro .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
@@ -280,19 +331,20 @@ section.intro {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-  }
+}
 
-  .intro .swiper-slide img {
+.intro .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
+}
 
-  .intro .swiper {
+.intro .swiper {
     margin-left: auto;
     margin-right: auto;
-  }
+}
+
 .flower {
     width: 7.5%;
     height: 15%;
@@ -300,6 +352,7 @@ section.intro {
     top: 20%;
     left: 83%;
 }
+
 .lotus {
     width: 10%;
     height: 20%;
@@ -307,6 +360,7 @@ section.intro {
     left: 10%;
     top: 40%;
 }
+
 .wave {
     width: 9%;
     height: 11%;
@@ -317,7 +371,7 @@ section.intro {
 .general-info .swiper {
     width: 100%;
     height: 100%;
-  }
+}
 
 .general-info .swiper-slide {
     text-align: center;
@@ -337,27 +391,31 @@ section.intro {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-  }
+}
 
 .general-info .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
+}
+
 .diversity {
     background: #05224a;
     width: 100%;
     height: auto;
 }
+
 .diversity .product {
     background: #fff;
     height: 100%;
 }
+
 .diversity .product .info ul li {
     position: relative;
     padding: 5px 25px;
 }
+
 .diversity .product .info ul li::before {
     content: "";
     background: url("data:image/svg+xml;utf8, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22100%25%22%20%20viewBox%3D%220%200%201792%201896.0833%22%20fill%3D%22rgba(13%2C%2098%2C%20242%2C%201.0)%22%3E%20%3Cpath%20d%3D%22M1671%20566q0%2040-28%2068l-724%20724-136%20136q-28%2028-68%2028t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28%2068-28t68%2028l294%20295%20656-657q28-28%2068-28t68%2028l136%20136q28%2028%2028%2068z%22%3E%3C%2Fpath%3E%20%3C%2Fsvg%3E") no-repeat;
@@ -367,37 +425,48 @@ section.intro {
     width: 20px;
     height: 20px;
 }
+
 .policies {
     background: url(img/beach-bg.jpeg) no-repeat center center / cover;
     width: 100%;
     background-attachment: fixed;
     height: auto;
 }
+
 .policies .flower-inner {
     width: 50px;
 }
+
 .policies .flower-inner img {
     top: 50%;
     transform: translateY(-50%);
     left: 3px;
 }
-.policies ul.voucher > li:nth-child(even) {
+
+.policies ul.voucher>li:nth-child(even) {
     padding-bottom: 10px;
 }
+
 .policies ul.member li {
     padding: 10px 0;
 }
-.policies .price-list, .policies .policy {
+
+.policies .price-list,
+.policies .policy {
     background: #fff;
     position: relative;
 }
+
 .five-star .utility img {
     border-bottom-right-radius: 50px;
     width: 100%;
 }
-.five-star .utility.one, .five-star .utility.five  {
+
+.five-star .utility.one,
+.five-star .utility.five {
     background: #171f5e;
 }
+
 .five-star .utility {
     background: #0b68e6;
     color: #fff;
@@ -405,19 +474,23 @@ section.intro {
     flex-direction: column;
     height: 100%;
 }
+
 .five-star .utility h3 {
     font-size: 18px;
     font-weight: 700;
 }
+
 .customer-feelings {
     background: #171f5e;
     width: 100%;
 }
+
 .customer-feelings .comment {
     background: #fff;
     color: #545454;
     position: relative;
 }
+
 .customer-feelings .comment::after {
     position: absolute;
     content: url(img/quote.svg);
@@ -427,6 +500,7 @@ section.intro {
     bottom: -15px;
     right: 40px;
 }
+
 .customer-feelings .customer1 {
     border-radius: 50%;
     width: 100px;
@@ -434,6 +508,7 @@ section.intro {
     border: 2px solid #fff;
     background: url(img/customer-1.png) no-repeat 70% 50% /cover;
 }
+
 .customer-feelings .customer2 {
     border-radius: 50%;
     width: 100px;
@@ -441,6 +516,7 @@ section.intro {
     border: 2px solid #fff;
     background: url(img/customer-2.png) no-repeat 15% 50% /cover;
 }
+
 .customer-feelings .customer3 {
     border-radius: 50%;
     width: 100px;
@@ -448,43 +524,54 @@ section.intro {
     border: 2px solid #fff;
     background: url(img/customer-3.png) no-repeat 70% 50% /cover;
 }
+
 .customer-feelings .feelings .inner .wrapper .name {
     font-size: 14px;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
 }
+
 .customer-feelings .feelings .inner .wrapper .type {
     font-size: 12px;
     font-family: 'Open Sans', sans-serif;
 }
+
 .customer-feelings .feelings .inner .comment p {
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
     line-height: 1.6;
     letter-spacing: 1px;
 }
+
 .customer-feelings .feelings .inner .wrapper .info {
     padding-left: 20px;
 }
+
 .real-img-sec .real-img-1 .col-3 img {
     height: 50%;
 }
+
 .real-img-sec .real-img-1 .col-6 img {
     height: 100%;
 }
+
 .real-img-sec img {
     padding: 10px 0;
 }
+
 footer {
     background: url(img/footer-beach.jpg) no-repeat center center / cover;
     background-color: #051f4fe6;
 }
+
 footer .headLine-white {
     font-size: 18px;
 }
+
 footer ul {
     padding: 10px 0;
 }
+
 .blueBackground {
     background: #0a67e9;
     font-weight: bold;
@@ -492,7 +579,8 @@ footer ul {
     color: #fff;
     padding: 20px 10px;
 }
-footer .last-line::before  {
+
+footer .last-line::before {
     content: "";
     position: absolute;
     top: -12px;
@@ -510,28 +598,37 @@ footer .last-line::before  {
     .diversity .product .info ul li {
         font-size: 13px;
     }
+
     header {
         margin-bottom: 0;
     }
+
     .policies ul {
         padding: 10px 0 0 45px;
     }
-    .policies .price-list::after, .policies .policy::after {
+
+    .policies .price-list::after,
+    .policies .policy::after {
         top: 59%;
         left: 3px;
     }
+
     .five-star .utility h3 {
         font-size: 13px;
     }
+
     .customer-feelings .inner {
         padding: 30px 0;
     }
+
     #indexPage .hospital {
         padding: 40px 0;
     }
+
     #indexPage .advantages .item {
         padding: 20px 0;
     }
+
     .customer-feelings .inner {
         align-items: center;
     }
